# csa-lab4

./: .gitignore  CMakeLists.txt  Makefile  README.MD  README.md
.github/workflows/: ci.yml
example/: cat.srs  factorial.srs  hello.srs  hello_user_name.srs  sum_square_difference.srs
example-asm/: macro1.asm  macro2.asm
example-srs/: factorial.srs  hello_user_name.srs  sum_square_difference.srs
src/: main.c  translator.c
src/preprocessor/: preprocessor.c  preprocessor.h
src/translator/: argparser.c  argparser.h  asm_commands.rs  ast_maker.rs  main.rs  srs_commands.rs  tokenizer.c  tokenizer.h  tokenizer.rs
src/util/: filereader.rs  formater.rs  pretty_printer.rs
test/: preprocessor_error.c  preprocessor_success.c  test1.c  translator_argparser.c  translator_argparser_error.c  translator_argparser_success.c  translator_tokenizer_free.c
tests/: golden.rs  test1.rs  unit.rs
